[package]
name = "sigma-racer-vehicle"
description = "Sigma Racer vehicle signal daemon — CAN decode and VSS telemetry publisher"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-racer-vehicle"
homepage = "https://sigmatactical.org"
publish = false

[[bin]]
name = "sigma-racer-vehicle"
path = "src/main.rs"

[features]
default = []
can-socket = ["dep:socketcan"]
rpmsg = ["dep:sigma-racer-sidearm"]

[dependencies]
sigma-racer-sidearm = { git = "ssh://git@github.com/sigmatactical-org/sigma-racer-sidearm.git", rev = "a4c04c8", default-features = true, optional = true }
sigma-racer-telemetry = { git = "ssh://git@github.com/sigmatactical-org/sigma-racer-telemetry.git", rev = "dfa61eb" }
mdf4-rs = { version = "0.3.3", default-features = false, features = ["std", "dbc", "can"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
socketcan = { version = "3.6.2", optional = true }
